[gd_scene load_steps=6 format=3 uid="uid://bnpci6lx6d0ve"]

[ext_resource type="Script" path="res://ui/settings_menu_screen.gd" id="1_kdqj1"]
[ext_resource type="Texture2D" uid="uid://riw5epitme28" path="res://ui/environment-preview.png" id="2_c2qwt"]
[ext_resource type="Theme" uid="uid://ddr12d5h68dd1" path="res://ui/theme/game_theme.tres" id="3_in15j"]
[ext_resource type="Texture2D" uid="uid://bbhqr4m1gcnn" path="res://ui/player-run-4.png" id="4_bv2g0"]
[ext_resource type="Texture2D" uid="uid://13vp2vbi46e3" path="res://ui/crab-walk-1.png" id="5_6e7pp"]

[node name="SettingsMenuScreen" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_kdqj1")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.815686, 0.290196, 0.780392, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -332.0
offset_top = -68.0
offset_right = 244.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_c2qwt")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_in15j")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="WindowModeOptionButton" type="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResolutionOptionButton" type="OptionButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "MAIN MENU"

[node name="Player-run-4" type="Sprite2D" parent="."]
position = Vector2(166, 231)
texture = ExtResource("4_bv2g0")

[node name="Crab-walk-1" type="Sprite2D" parent="."]
position = Vector2(246, 237)
texture = ExtResource("5_6e7pp")

[connection signal="item_selected" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/WindowModeOptionButton" to="." method="_on_window_mode_option_button_item_selected"]
[connection signal="item_selected" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/ResolutionOptionButton" to="." method="_on_resolution_option_button_item_selected"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
